--- a/css/dfdesigner-646b22.webflow.css
+++ b/css/dfdesigner-646b22.webflow.css
@@ -1357,7 +1357,7 @@ figcaption {
 
 .hero-container {
   z-index: 2;
-  background-color: #00000026;
+  background-color: #0003;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -2227,7 +2227,7 @@ figcaption {
 
 .project_title-image.project-04 {
   filter: contrast(105%);
-  background-image: linear-gradient(#fff0, #0006), url('../images/bitbeli_cover_big_1.avif');
+  background-image: linear-gradient(#fff0, #00000080), url('../images/bitbeli_cover_big_1.avif');
   background-position: 0 0, 50%;
   background-size: auto, cover;
   background-attachment: scroll, fixed;
@@ -6579,6 +6579,10 @@ figcaption {
 
   .dfdesigner-logo {
     width: 48px;
+  }
+
+  .section_hero {
+    border-radius: 40px;
   }
 
   .hero-container {
